--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Use Cases Pool</title>
+  <title>index</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -10,36 +10,6 @@
 </head>
 <body>
 
-<div class="container">
-  <h2>Profile</h2>
-  <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#character">Character</a></li>
-    <li><a data-toggle="tab" href="#inventory">Inventory</a></li>
-    <li><a data-toggle="tab" href="#friends">Friends</a></li>
-    <li><a data-toggle="tab" href="#accountInfo">Account Info</a></li>
-  </ul>
-
-  <div class="tab-content">
-    <div id="character" class="tab-pane fade in active">
-      <h3>Character</h3>
-      
-    </div>
-    <div id="inventory" class="tab-pane fade">
-	  <h3>Inventory</h3>
-	 
-	 <img src="moneybag.png" class="img-thumbnail" alt="moneybag" width="50" height="50">
-	  
-    </div>
-    <div id="friends" class="tab-pane fade">
-      <h3>Friends</h3>
-       
-    </div>
-    <div id="accountInfo" class="tab-pane fade">
-      <h3>Account Info</h3>
-      <p>hi there! This tab will have more account info in the future!</p>
-    </div>
-  </div>
-</div>
-
+<
 </body>
 </html>
